ilişkiler güncellendi, databse oluşturuldu

--- a/SFDEnerji.Web/appsettings.json
+++ b/SFDEnerji.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-F2FGRQ0\\SQLEXPRESS;Database=SFDEnerjiWeb;Integrated Security=true;TrustServerCertificate=Yes"
+  }
 }
