--- a/SFDEnerji.Web/SFDEnerji.Web.csproj
+++ b/SFDEnerji.Web/SFDEnerji.Web.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SFDEnerji.Data\SFDEnerji.Data.csproj" />
+    <ProjectReference Include="..\SFDEnerji.Repository\SFDEnerji.Repository.csproj" />
   </ItemGroup>
 
 </Project>
